# topic_shift

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: api.py  app.py  gui.py
src/logic/: json_to_amsl.py  pdf_content_loading.py  topic_extraction.py
src/models/: topic.py
